# qtsciter

./: CMakeLists.txt  QSciter.cpp  QSciter.h  README.md  main.cpp  page.html  setup.bat
